server/.tanzu/config/httproute-pivotalspring.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/pivotalspring
  name: pivotalspring-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: pivotalspring
  rules:
  - backendRefs:
    - kind: Service
      name: pivotalspring
      port: 8080
